style to fix rawTxt and preview from going off screen

--- a/app/css/components/sidebar.css
+++ b/app/css/components/sidebar.css
@@ -33,7 +33,7 @@
 }
 
 .notesContainer {
-    height: 90%;
+    height: 85%;
     overflow-y: auto;
 }
 
