--- a/app/css/containers/notes.css
+++ b/app/css/containers/notes.css
@@ -20,7 +20,7 @@
 }
 
 .txtRaw {
-  height: 100%;
+  height: 92%;
   width: 100%;
   padding: 0.5rem;
   resize: none;
@@ -31,7 +31,7 @@
 }
 
 .preview {
-  height: 100%;
+  height: 92%;
   overflow-y: auto;
 }
 
